# aiorun

./: .coveragerc  .dockerignore  .flake8  .travis.yml  CHANGES  CONTRIBUTORS  README.rst  TODO  aiorun.py  appveyor.yml  docker-compose.yml  flit.ini  pyproject.toml  pytest.ini  requirements-test.txt  test.dockerfile  test.dockerfile36  test38.dockerfile  testshield.py  watchtest.sh
.github/: FUNDING.yml
.github/workflows/: pythonapp.yml
aiorun/: __init__.py
examples/: echo_client.py  echo_server.py  stop_unhandled.py  stop_unhandled_custom.py  stop_unhandled_illegal.py  stop_unhandled_task.py
tests/: conftest.py  fake_main.py  fake_main_dec.py  fake_main_dec_call.py  test_decorators.py  test_main.py  test_posix.py  test_stop_on_errors.py  test_win.py
