[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aiorun"
author = "Caleb Hattingh"
author-email = "caleb.hattingh@gmail.com"
home-page = "https://github.com/cjrh/aiorun"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
    ]
description-file = "README.rst"
requires = ["typing; python_version < '3.5'"]
requires-python = ">=3.5"

[tool.flit.metadata.requires-extra]
dev = [
    "pytest",
    "pytest-cov"
]
